# GenreRevealParty

./: .gitignore  README.md  README_tmp.html  runall.sh  validation.py
OpenMP/: CMakeLists.txt  mainOpenMP.cpp
OpenMPI/: CMakeLists.txt  mainMPI.cpp
cuda_MPI/: CMakeLists.txt  kernels.cu  mpi_main.cpp
docs/: clusters.md  outputs.md  todo.md
include/: fileops.hpp  kernels.cuh  kmeans.hpp  mpi_shared.h  points.hpp
parallel_cuda/: CMakeLists.txt  main.cu
serial/: CMakeLists.txt  dummy.csv  main.cpp
visualizer/: main.py  pyproject.toml  pyvenv.cfg
